--- a/app/views/ruby_lessons/lessons/lesson_10.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_10.html.erb
@@ -305,7 +305,36 @@ end
 0
 </code></pre>
 
+<h2>Coding Challenge</h2>
 
+<p>
+  Write a program the does the following:
+</p>
+
+<ul>
+  <li>Ask the user to input a sentence</li>
+  <li>Count the number of times each word in the sentence appears in the sentence</li>
+  <li><strong>The results should be case insensitive</strong></li>
+  <ul>
+    <li>For example, <code>"Pizza"</code> and <code>"pizza"</code> should be counted as the same word</li>
+  </ul>
+</ul> 
+
+<p>
+  The program should run like this:
+</p>
+
+<%= image_tag 'ruby_lessons/word_counter', class: 'img-responsive screenshot' %>
+
+<p><strong>This is a tricky problem!</strong> Good luck on this challenge!</p>
+
+<div class="hint" data-hint-id="1">
+  <p>
+    First, let's get the user input.
+  </p>
+</div>
+
+<% @hints = true %>
 
 
 
