--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -26,6 +26,8 @@
       <%= render file: "app/views/#{@current_course_link}/lessons/lesson_#{@current_lesson_id}" %>
       <br class = "clear">
 
+      <%= render partial: 'hints' if @hints %>
+
       <%= render 'lesson_nav_section' %>
 
       <%= render partial: '/submissions/for_lesson' if @submission_form %>
@@ -41,5 +43,114 @@
 </div>
 
 <script type="text/javascript">
+var hints;
+hints = {
+  show_next_gotcha: function(el) {
+    var gotcha = $(".gotcha[data-gotcha-id=" + el.data("gotcha-id") + "]");
+
+    if (gotcha.length === 0) {
+      this.show_all();
+    } 
+    else {
+      this.show_hint(gotcha);
+      // display elements with data-hint-id that is <= el.data-hint-id  
+      this.show_preceding_hints(gotcha);
+      // - Increment btn-gotcha data-gotcha-id
+      // el.data("gotcha-id", el.data("gotcha-id") + 1);
+
+      if (!this.has_next("gotcha", el.data("gotcha-id"))) {
+        this.disable_button(el);
+      }    
+
+      console.log(el.data("hint-id"));
+      if(!this.has_next("hint", el.data("hint-id"))) {      
+        this.disable_button($("#btn-hint"));      
+      } 
+
+      this.scroll_to(gotcha);
+    }
+  },
+  show_next_hint: function(el) {
+    var hint = $(".hint[data-hint-id=" + el.data("hint-id") + "]");
+    this.show_preceding_hints(hint);
+
+    console.log(el.data("hint-id"));
+    if (!this.has_next("hint", el.data("hint-id"))) {
+      this.disable_button(el);
+    }
+
+    this.scroll_to(hint);
+  },
+  has_next: function(class_name, next_id){
+    return ($("." + class_name +  "[data-" + class_name + "-id=" + next_id + "]").length !== 0);
+  },
+  disable_button: function(el){    
+    el.prop("disabled", true);
+  },
+  show_preceding_hints: function(el){
+    var hints = $('[data-hint-id]').filter(function(){
+      return $(this).data("hint-id") <= el.data("hint-id");
+    }); 
+
+    var that = this;
+    $.each(hints, function(){      
+      that.show_hint( $(this) );
+      // if gotcha element was inside the displayed hints, updated btn-gotcha data-gotcha-id
+      if ($(this).attr("class").includes('gotcha')) {
+        $("#btn-gotcha").data("gotcha-id", $(this).data("gotcha-id") + 1);
+
+        if (!that.has_next("gotcha", $("#btn-gotcha").data("gotcha-id"))) {
+          that.disable_button($("#btn-gotcha"));
+        }
+      }
+    });
+     // - Increment btn-hint data-hint-id 
+    $("#btn-hint").data("hint-id", el.data("hint-id") + 1);  
+    $("#btn-gotcha").data("hint-id", el.data("hint-id") + 1);   
+  },
+  show_all: function(){
+    this.show_hint($(".hint"));
+    this.show_hint($(".gotcha"));
+    $("#btn-hint").prop("disabled", true);
+    $("#btn-gotcha").prop("disabled", true);
+    $("#btn-all-hints").prop("disabled", true);
+    this.scroll_to($(".hint")[0]);    
+    return;
+  },
+  show_hint: function(el){
+    el.fadeIn();
+    el.addClass("hint-activated");
+    window.setTimeout(function(){
+      el.removeClass("hint-activated");
+    }, 10000);
+  },
+  scroll_to: function(el) {
+    $('html,body').animate({ 
+        scrollTop: el.offset().top - 50
+    }, 800);
+  }
+}  
+
+$("#btn-gotcha").on("click", function(){
+  hints.show_next_gotcha($(this), "gotcha-id");  
+});
+
+$("#btn-hint").on("click", function(){
+  hints.show_next_hint($(this), "hint-id");
+});
+
+$("#btn-all-hints").on("click", function(){
+  hints.show_all();
+});
+
+
 $(document).on('turbolinks:load', show_page_trigger);
+
+$(document).on('turbolinks:load', function(){
+  if ($(".hint").length === 0) {
+    $("#btn-hint").prop('disabled', true);
+    $("#btn-gotcha").prop('disabled', true);
+    $("#btn-all-hints").prop('disabled', true);
+  }
+});
 </script>
