--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -26,7 +26,7 @@
       <%= render file: "app/views/#{@current_course_link}/lessons/lesson_#{@current_lesson_id}" %>
       <br class = "clear">
 
-      <%= render partial: 'hints' if @hints %>
+      <%= render partial: 'layouts/hints' if @hints %>
 
       <%= render 'lesson_nav_section' %>
 
